--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -6,6 +6,14 @@
     font-family: "Rethink Sans";
 }
 
+.linha_reta{
+    width: 1px;
+    height: 100px;
+    background-color: rgb(133, 133, 133);
+    border-radius: 10px;
+    margin: 30px;
+}
+
 /* Header */
 header {
     width: 100%;
