--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,14 @@
     background-color: #1c1c1c;
 }
 
+.container_index {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .linha {
     width: 100%;
     height: 1px;
@@ -23,7 +31,22 @@
     border-radius: 10px;
 }
 
-/* Carrocel */
+/* foto */
+
+.foto_index{
+    width: 100%;
+    height: 500px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_foto {
+    width: 1300px;
+    height: 100%;
+    background-color: blue;
+}
 
 
 /* Dilema */
@@ -141,7 +164,7 @@
 }
 
 .tit {
-    width: 100%;
+    width: 1100px;
     margin-top: 50px;
     height: 40px;
     display: flex;
@@ -180,7 +203,7 @@ p {
 }
 
 .container img {
-    width: 400px;
+    width: 500px;
     height: 350px;
 }
 
@@ -200,4 +223,133 @@ p {
     margin-right: 5px;
     width: 25px;
     height: 25px;
+}
+
+
+/* footer */
+
+
+footer {
+    width: 100%;
+    height: 300px;
+    background-color: #141414;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container_footer {
+    width: 1400px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_img {
+    width: 400px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer_img img {
+    width: 300px;
+}
+
+
+.links_footer {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: left;
+    flex-direction: column;
+}
+
+.links_footer h1 {
+    font-size: 17px;
+    margin: 5px;
+    color: white;
+}
+
+.links_footer a {
+    color: rgb(151, 151, 151);
+    text-decoration: none;
+    margin: 5px;
+    font-size: 15px;
+}
+
+.redes {
+    width: 100px;
+    height: 150px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: left;
+    flex-direction: column;
+}
+
+.redes h1 {
+    font-size: 17px;
+    margin: 5px;
+    color: white;
+
+}
+
+.redes img {
+    width: 30px;
+    margin: 5px;
+}
+
+.apoio {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: left;
+    flex-direction: column;
+}
+
+.apoio h1 {
+    font-size: 17px;
+    color: white;
+}
+
+.apoio p {
+    width: 120px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    font-size: 15px;
+    color: rgb(151, 151, 151);
+}
+
+.apoio img {
+    width: 100px;
+}
+
+.politicas {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_politicas {
+    width: 1400px;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+.container_politicas a {
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
