--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -516,80 +516,13 @@ header {
 /* Responsivo */
 
 @media(max-width: 1000px) {
-    header {
-        width: 100%;
-        height: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .container_header_disciplinas {
-        width: 700px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .pesquisar {
-        width: 500px;
-    }
-
-    .links_disciplinas img {
-        width: 50px;
-        height: 50px;
-    }
-
-    #cadastre-se, #painelButton, #logout-button {
-        width: 60px;
-    }
-
-    #pesquisarInput {
-        width: 200px;
-    }
-
-    #disciplinas {
-        width: 100%;
-    }
-
-    .container_disciplinas {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .conteudo_disciplinas {
-        width: 100%;
-        height: 200px;
-    }
-
-    .escrita_disciplinas {
-        padding: 10px;
-    }
-
-    .cabecario_disciplinas {
-        width: 100%;
-    }
-
-    .filtro_categorias button {
-        width: 80px;
-        font-size: 13px;
-    }
-
-    .linha_grande {
-        width: 100%;
-    }
-
-}
-
-@media (max-width: 420px) {
-
     .linha_grande {
         width: 100%;
     }
 
     header {
         width: 100%;
+        height: 90px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -604,7 +537,7 @@ header {
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
     }
 
@@ -617,7 +550,7 @@ header {
         display: flex;
         flex-direction: column;
     }
-    
+
     .conteudo_disciplinas {
         width: 100%;
         height: 200px;
@@ -669,9 +602,113 @@ header {
         align-items: center;
     }
 
-    #cadastre-se, #painelButton, #logout-button {
+    #cadastre-se,
+    #painelButton,
+    #logout-button {
         width: 70px;
-        height: 30px;
+        height: 45px;
         font-size: 11px;
+        width: 100%;
+        border-radius: 0px;
+    }
+
+}
+
+@media (max-width: 420px) {
+
+    .linha_grande {
+        width: 100%;
+    }
+
+    header {
+        width: 100%;
+        height: 90px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .links_disciplinas img {
+        width: 100px;
+    }
+
+    .container_header_disciplinas {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #disciplinas {
+        width: 100%;
+    }
+
+    .container_disciplinas {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .conteudo_disciplinas {
+        width: 100%;
+        height: 200px;
+        flex-direction: column;
+
+    }
+
+    .escrita_disciplinas {
+        width: 100px;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        text-align: center;
+    }
+
+    .escrita_disciplinas p {
+        width: 200px;
+    }
+
+    .cabecario_disciplinas {
+        width: 100%;
+    }
+
+    .filtro_categorias button {
+        width: 80px;
+        font-size: 13px;
+    }
+
+    .pesquisar {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #pesquisarInput {
+        width: 250px;
+    }
+
+    .links_disciplinas {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .acoes_disciplinas {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #cadastre-se,
+    #painelButton,
+    #logout-button {
+        width: 70px;
+        height: 45px;
+        font-size: 11px;
+        width: 100%;
+        border-radius: 0px;
     }
 }
