--- a/css/index.css
+++ b/css/index.css
@@ -359,27 +359,63 @@ footer {
     font-weight: bold;
 }
  @media (max-width: 900px){
-    .container_foto{
-        width: 800px;
+    .container_dilema{
+        display: flex;
+        flex-direction: column;
         height: auto;
+        width: 100%;
     }
-    .foto_index{
+    .caixa_dilema{     
+        width: 100%;
+        height: 250px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .dilema{
+        width: 390px;
         height: auto;
-    }
-    .tit{
-        width: 800px;
-    
-    }
-    .container{
-        width: 800px;
-        gap: 40px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
     .container_exibir{
-        width: 780px;
+        width: 370px;
     }
-    .caixa_dilema{
-        width: 220px;
-        height: 280px;
+    #quem_somos{
+        flex-direction: column;
+        height: 700px;
+    }
+    .container{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .tit{
+        margin-bottom: 65px;
+        width: 380px;
+        height: 100px;
+    }
+    .texto{
+        width: 370px;
+        
+    }
+    iframe{
+        width: 370px;
+        height: 370px;
+    }
+    #xiru{
+        width: 370px;
+    }
+
+    .container_exibir a {
+        width: 100%;
+        height: 100%;
+    }
+    .cursos_exibir {
+        width: 100%;
+        height: 800px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 @media (max-width: 450px){
@@ -387,6 +423,7 @@ footer {
         display: flex;
         flex-direction: column;
         height: auto;
+        width: 100%;
     }
     .caixa_dilema{     
         width: 100%;
