--- a/css/login_cadastro.css
+++ b/css/login_cadastro.css
@@ -193,5 +193,103 @@
     border-radius: 5px;
 }
 
-/* pagina de cadastro*/
+@media(max-width: 1000px) {
+    .login {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
+    .container_login {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .caixa_conteudo_login {
+        width: 100%;
+        height: 300px;
+    }
+
+    .caixa {
+        width: 100%;
+        height: 200px;
+        border-radius: 0px;
+    }
+
+    .login_form {
+        width: 100%;
+    }
+}
+
+@media(max-width: 420px) {
+    .login{
+        width: 100%;
+        height: 1000px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container_login {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .caixa_conteudo_login {
+        width: 100%;
+        height: 300px;
+    }
+
+    .caixa {
+        width: 100%;
+        height: 200px;
+        border-radius: 0px;
+    }
+
+    .form_inputs {
+        width: 100%;
+    }
+
+    .login_form {
+        width: 100%;
+    }
+
+    .escrita_form {
+        width: 80%;
+    }
+
+    .escrita_form h1 {
+        font-size: 20px;
+    }
+
+    .linha {
+        width: 100%;
+    }
+
+    #login-form {
+        width: 300px;
+    } 
+
+    #login-form input {
+        width: 100%;
+    } 
+
+    #register-form {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+} 
