--- a/css/index.css
+++ b/css/index.css
@@ -262,7 +262,7 @@ footer {
 }
 
 .footer_img img {
-    width: 300px;
+    width: 200px;
 }
 
 
@@ -299,7 +299,7 @@ footer {
 
 .redes h1 {
     font-size: 17px;
-    margin: 5px;
+  
     color: white;
 
 }
@@ -358,6 +358,14 @@ footer {
     text-decoration: none;
     font-weight: bold;
 }
+.linha_reta{
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 63px;
+    border: 0.5px solid white;
+}
+
+
  @media (max-width: 900px){
     .container_dilema{
         display: flex;
@@ -417,7 +425,36 @@ footer {
         margin-top: 10px;
         margin-bottom: 10px;
     }
+
+    .container_footer{
+        width: 100%;
+       
+    }
+    .footer_img{
+        width: 20%;
+        height: 20%;
+    }
+    .footer_img img{
+        width: 170px;
+        height: 170px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    footer{
+        width: 100%;
+    }
+    .politicas{
+        margin-right: 40px;
+    }
 }
+
+@media (max-width: 630px){
+    .footer_img img{
+        width: 110px;
+        height: 110px;
+    }
+}
+
 @media (max-width: 450px){
     .container_dilema{
         display: flex;
@@ -432,7 +469,7 @@ footer {
         margin-bottom: 20px;
     }
     .dilema{
-        width: 390px;
+        width: 100%;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -441,6 +478,10 @@ footer {
     }
     .container_exibir{
         width: 370px;
+    }
+
+    .caixa_dilema {
+        padding: 0px;
     }
     #quem_somos{
         flex-direction: column;
@@ -452,7 +493,7 @@ footer {
     }
     .tit{
         margin-bottom: 65px;
-        width: 380px;
+        width: 100%;
         height: 100px;
     }
     .texto{
@@ -460,11 +501,15 @@ footer {
         
     }
     iframe{
-        width: 370px;
+        width: 100%;
         height: 370px;
     }
     #xiru{
         width: 370px;
+    }
+
+    .container{
+        width: 100%;
     }
 
     .container_exibir a {
@@ -476,5 +521,24 @@ footer {
         height: 800px;
         margin-top: 10px;
         margin-bottom: 10px;
+    }
+
+    footer{
+        width: 100%;
+        height: 229px;
+    }
+    
+    .links_footer .sbT, .links_footer a, .redes .sbT, .apoio .sbT{
+        font-size: 8pt;
+        
+    }
+    .apoio p{
+        width: auto;
+        margin-right: 10px;
+        font-size: 8pt;
+    }
+    .footer_img img{
+        width: 63px;
+        height: 63px;
     }
 }
