--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Geist:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -14,7 +13,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:  #141414;
+    background-color: #141414;
 }
 
 
@@ -42,7 +41,7 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:  #141414;
+    background-color: #141414;
     border: 1px solid #8136e3;
     color: white;
     font-weight: 900;
@@ -55,7 +54,7 @@ span {
 }
 
 .header_compartilhe:hover {
-    background-color:  #4c1e5c;
+    background-color: #4c1e5c;
 }
 
 .escrita_header_curso {
@@ -83,7 +82,7 @@ span {
     width: 100%;
     display: flex;
     height: 100vh;
-    
+
 }
 
 /* cabecario */
@@ -127,7 +126,7 @@ span {
     background-color: #4c1e5c;
 }
 
-.escrita_topicos button{
+.escrita_topicos button {
     width: 25px;
     height: 25px;
     background-color: #4c1e5c;
@@ -137,6 +136,7 @@ span {
 .escrita_topicos img {
     width: 100%;
 }
+
 .topicos .escrita_topicos h1 {
     font-size: 16px;
     font-weight: bold;
@@ -251,7 +251,7 @@ span {
 .conteudo img {
     width: 400px;
     border-radius: 20px;
-    border:  1px solid rgb(168, 168, 168);
+    border: 1px solid rgb(168, 168, 168);
     margin: 20px;
 }
 
@@ -301,7 +301,7 @@ span {
     align-items: center;
 }
 
-.conteudo_video iframe{
+.conteudo_video iframe {
     width: 800px;
     height: 400px;
     margin: 10px;
@@ -317,7 +317,8 @@ span {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+    background: rgba(0, 0, 0, 0.5);
+    /* Fundo semi-transparente */
     justify-content: center;
     align-items: center;
     z-index: 1000;
@@ -389,4 +390,275 @@ span {
     padding: 10px;
     background-color: #4c1e5c;
 
+}
+
+
+@media (max-width: 780px) {
+    body {
+        background-color: #1c1c1c;
+    }
+
+    header {
+        height: auto;
+    }
+
+    .container_header_curso {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 5px;
+    }
+
+    .escrita_header_curso {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .escrita_header_curso img {
+        max-width: 50px;
+        height: auto;
+    }
+
+    .header_compartilhe {
+        font-size: 12px;
+        padding: 5px 10px;
+        margin: 0;
+    }
+
+    span {
+        font-size: 18px;
+        color: #686868;
+    }
+
+    .all {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+    }
+
+    .topicos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #141414;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .topicos .escrita_topicos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+    }
+
+    .elementos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .conteudos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .conteudo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+    }
+
+    .conteudo h1 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .conteudo p {
+        font-size: 16px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .conteudo img {
+        width: 100%;
+        max-width: 300px;
+        margin-bottom: 20px;
+    }
+
+    .conteudo_video iframe {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+    .botao_download {
+        width: 100%;
+        max-width: 300px;
+        text-align: center;
+        padding: 10px;
+        font-size: 14px;
+    }
+}
+
+
+@media (max-width: 480px) {
+    body {
+        background-color: #1c1c1c;
+    }
+
+    header {
+        height: auto;
+    }
+
+    
+
+    .container_header_curso {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 5px;
+    }
+
+    .escrita_header_curso {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .escrita_header_curso img {
+        max-width: 50px;
+        height: auto;
+    }
+
+    .header_compartilhe {
+        font-size: 12px;
+        padding: 5px 10px;
+        margin: 0;
+    }
+
+    span {
+        font-size: 18px;
+        color: #686868;
+    }
+
+    .all {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+    }
+
+    .topicos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #141414;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .topicos .escrita_topicos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+    }
+
+    .elementos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .conteudos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .conteudo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 200px;
+        padding: 0px;
+    }
+
+    .conteudo h1 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        text-align: center;
+        width: 100%;
+    }
+
+    .conteudo p {
+        font-size: 16px;
+        margin-bottom: 20px;
+        text-align: center;
+        width: 100%;
+    }
+
+    .conteudo img {
+        width: 100%;
+        max-width: 300px;
+        margin-bottom: 20px;
+    }
+
+    .container_conteudo {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+
+    .conteudo_video iframe {
+
+    }
+
+    .botao_download {
+        width: 100%;
+        max-width: 300px;
+        text-align: center;
+        padding: 10px;
+        font-size: 14px;
+    }
 }
